Fix: Changed some font sizes, colors, added horizontal scroll bar for departments section

--- a/GG-Hospital/asset/css/style.css
+++ b/GG-Hospital/asset/css/style.css
@@ -14,20 +14,7 @@
     /*========Background colors========*/
     --body-bg-color:#FFFFFF;
 
-    --card-bg-color:#132347;
-    --modal-bg-color:#102048;
-    --bg-transparent-color:rgba(255,255,255, 0.1);
-    --transparent-color-01:rgba(255,255,255, 0.1);
-    --line-color:#454f6b;
 
-    /*========Color Filter========*/
-    --color-filter:invert(0);
-
-    /*========Scroll bar colors========*/
-    --scroll-bar-color:#c1ceff;
-    --scroll-thumb-color:#282f4e;
-    --scroll-thumb-hover-color:#454f6b;
-    
 }
 
 
@@ -49,9 +36,7 @@ body{
 font-family: inter, sans-serif;
 color:var(--first-color);
 background: var(--body-bg-color);
-/* margin: 1rem 0 0 0; */
 
-/* margin: 1rem 4rem 4rem 4rem; */
 transition: .5s ease;
 /* letter-spacing: 1px; */
 }
@@ -144,7 +129,7 @@ background-color: #fff;
 
 
 .top-bar-main .top-bar .socials img{
-    width: 20px;
+    width: 24px;
     margin-left: 2px;
     margin-right: 2px;
     /* margin: 0 3px; */
@@ -211,7 +196,7 @@ padding: 5px;
 } 
 
 .nav-bar .nav-items a{
-padding: 20px;
+padding: 16px;
 font-weight: 500;
 font-size: 17px;
 position: relative;
@@ -248,6 +233,7 @@ font-weight: 500;
 
 
 
+
 .section{
     position: relative;
     /* max-width: 1150px; */
@@ -261,7 +247,7 @@ font-weight: 500;
 .main-container{
     /* margin-top: 50px; */
     background-image: url("../img/main-img.png");
-    height: 500px;
+    height: 568px;
     display: block;
     width: 100%;
     background-size: cover;
@@ -285,30 +271,32 @@ font-weight: 500;
     font-size: 65px;
     font-weight: 700;
     padding-bottom: 5px;
+    margin-bottom: 22px;
 
 }
 
 .main-container .left-side p{
 
-    font-size: 18px;
+    font-size: 22px;
     font-weight: 400;
     padding-bottom: 5px;
 
 }
 
-.main-container .left-side h1{
+/* .main-container .left-side h1{
 
 
     font-size: 3rem;
     padding-bottom: 5px;
 
-}
+} */
 
 
 .main-container .left-side .buttons{
     padding: 5;
     margin-top: 20px;
     display: flex;
+    margin-bottom: 20px;
 }
 
 
@@ -323,6 +311,7 @@ font-weight: 500;
     height: 59;
     color:var(--body-bg-color);
     font-size: 1rem;
+    font-weight: 500;
     box-shadow: rgba(0, 0, 0, 0.03) 0px 14px 23px 0px;
 
 }
@@ -370,6 +359,7 @@ position: relative;
 
 .main-container .appointment-container h3{
     padding-bottom: 10px;
+    font-size: 20px;
 }
 
 
@@ -450,6 +440,8 @@ text-align: left;
 .dept .dept-container{
     display: flex;
     padding-top: 40px;
+    overflow: scroll;
+    overflow-y:hidden;
 }
 
 
@@ -482,6 +474,7 @@ text-align: left;
     font-size: 18px;
 
 }
+
 
 
 
@@ -532,7 +525,6 @@ text-align: left;
 
 /* Specilist */
 
-
 .specialist{
     text-align: center;
 }
@@ -544,7 +536,7 @@ text-align: left;
 }
 
 .specialist h3{
-    font-size: 25px;
+    font-size: 35px;
     font-weight: 700;
     padding: 12px;
 
@@ -552,7 +544,8 @@ text-align: left;
 
 .specialist span{
     color: var(--third-color);
-    font-size: 15px;
+    font-size: 20px;
+    font-weight: 400;
 }
 
 .specialist .specialist-container{
@@ -578,14 +571,14 @@ text-align: left;
 }
 
 .specialist .specialist-container .specialist-box h3 {
-    font-size: 20px;
+    font-size: 25px;
     padding: 8px;
     font-weight: 600;
 }
  
 
 .specialist .specialist-container .specialist-box span {
-    font-size: 14px;
+    font-size: 15px;
     font-weight: 400;
     color: var(--third-color);
 }
@@ -604,8 +597,8 @@ text-align: left;
 
 .specialist .btn span{
     color: #ffffff;
-    font-weight: 550;
-
+    font-weight: 500;
+    font-size: 16px;
 }
 
 
@@ -622,10 +615,10 @@ text-align: left;
     justify-content: center;
 }
 
-.facilities-container h3{
-
-    font-size: 22px;
-    margin-bottom: 20px;
+.facilities h3{
+    font-size: 35px;
+    font-weight: 700;
+    padding: 12px;
 
 }
 
@@ -636,9 +629,12 @@ text-align: left;
 
 
 .facilities-container .facility-box img{
-    width: 320px;
-    margin: 20px;
+    width: 350px;
+    margin: 15px;
 }
+
+
+
 
 
 
@@ -655,16 +651,17 @@ text-align: left;
 }
 
 .interest h3{
-    margin-bottom: 25px;
-    font-size: 22px;
+    font-size: 35px;
+    font-weight: 700;
+    padding: 12px;
 }
 
 
 .interest-container{
     display: flex;
     justify-content: space-between;
-    margin: 20px;
-
+    margin: 15px;
+    /* position: relative; */
     
 }
 
@@ -681,6 +678,7 @@ text-align: left;
 
 .interest-container .interest-box h4{
     padding:15px 0;
+    font-size: 20px;
 }
 
 
@@ -697,8 +695,15 @@ text-align: left;
     background-image: url("../img/newsletter-bg.png");
     padding: 50px;
     margin-top: 50px;
+
+    /* position: relative; */
 }
 
+
+.newsletter-container .newsletter-left h3{
+    font-size: 25px;
+    font-weight: 700;
+}
 
 .newsletter-container .newsletter-right form{
     display: flex;
@@ -762,6 +767,8 @@ footer .top-section .logo{
 
 footer .top-section .logo p{
     padding: 20px 0;
+    font-size: 14px;
+    font-weight: 400;
 }
 
 
@@ -772,12 +779,16 @@ footer .top-section .about{
 
 footer .top-section .about h3{
     padding-bottom: 20px;
+    font-size: 18px;
+    font-weight: 600;
 }
 
 
 footer .top-section .about li{
     padding: 20px 50px 10px 0;
     margin-right: 30px;
+    font-size: 14px;
+    font-weight: 400;
 }
 
 footer .top-section .about .about-items{
@@ -792,12 +803,16 @@ footer .top-section .legal{
 
 footer .top-section .legal h3{
     padding-bottom: 20px;
+    font-size: 18px;
+    font-weight: 600;
 }
 
 
 footer .top-section .legal li{
     padding: 20px 20px 0 0;
     margin-right: 30px;
+    font-size: 14px;
+    font-weight: 400;
 
 }
 
@@ -834,6 +849,10 @@ footer .bottom-section .address-container img{
     margin-right: 5px;
     width: 15px;
 }
+footer .bottom-section .address-container p{
+    font-size: 14px;
+    font-weight: 400;
+}
 
 
 footer .bottom-section .phone-container{
@@ -844,6 +863,8 @@ footer .bottom-section .phone-container{
 
 footer .bottom-section .phone-container p{
     padding-bottom: 6px;
+    font-size: 14px;
+    font-weight: 400;
 }
 
 
@@ -854,6 +875,8 @@ footer .bottom-section .email-container{
 
 footer .bottom-section .email-container p{
     padding-bottom: 6px;
+    font-size: 14px;
+    font-weight: 400;
 }
 
 footer .bottom-section .socials-container{
@@ -861,6 +884,11 @@ footer .bottom-section .socials-container{
     padding: 25px;
 }
 
+footer .bottom-section .socials-container h3{
+    padding-bottom: 10px;
+    font-size: 18px;
+    font-weight: 600;
+}
 
 footer .bottom-section .socials-container ul{
     display: flex;
@@ -868,6 +896,7 @@ footer .bottom-section .socials-container ul{
 
 footer .bottom-section .socials-container ul li{
     padding: 10px
+
 } 
 
 
